# dctaxi

./: .gitignore  Dockerfile  Dockerfile.exp  Dockerfile.hpo  README.md  pyproject.toml
.dojo/.c522459b/: env.sh
.dojo/.d1147dd3/: env.sh
.dojo/.d4a88924/: env.sh
athena/: 0_int_workgroup.sh  1_query_test.sh  2_query_test_double.sh  athena_to_pandas.py
data-exploration/: 0_summary_stats.ipynb  1_dctaxi_dev_test.py  2_pyspark_dev_test.sh  README.md
data-loading/: 0_download_data.sh  1_createS3bucket.sh  2_create_aws_role.sh  3_crawler.sh  README.md
data-preprocessing/: 0_dctaxi_csv_to_parquet.py  1_parquet_glue_job.sh  2_parquet_crawler.sh  3_dctaxi_parquet_vacuum.py  4_pyspark_job.sh  README.md  trips_sample.csv
data-preprocessing/athena_exploration/: README.md  check_null_locations.sql  est_fare_upper.sql  validate_datetime.sql  validate_fareamount.sql
lightning_logs/version_0/: hparams.yaml
lightning_logs/version_1/: metrics.csv
lightning_logs/version_1/checkpoints/: epoch=0-step=1.ckpt
logs/dctaxi/seed_2145485342/: hparams.yaml  metrics.csv
logs/dctaxi/seed_2145485342/checkpoints/: epoch=0-step=20-v1.ckpt  epoch=0-step=20.ckpt
logs/dctaxi/seed_2146955208/: hparams.yaml  metrics.csv
logs/dctaxi/seed_2146955208/checkpoints/: epoch=0-step=20-v1.ckpt  epoch=0-step=20.ckpt
src/: experiment.py  hpo.py  model.py  trainer.py
src/lightning_logs/version_1/: hparams.yaml
src/lightning_logs/version_3/: hparams.yaml  metrics.csv
src/lightning_logs/version_3/checkpoints/: epoch=0-step=1.ckpt
